grid alignment fix - about page

--- a/css/about.css
+++ b/css/about.css
@@ -126,9 +126,9 @@ button:hover {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: 40% 40%;
+    grid-auto-flow: dense;
     gap: 30px;
-    width: 100vh;
     padding: 10px;
     align-items: center;
 }
